# execution-risk-research-stack

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/web/: .gitignore  README.md  bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
configs/: xauusd_reversion.yaml
docs/: CLI.md  DATA_PROVIDERS.md  DATA_STRUCTURES_AND_ALGORITHMS.md  FVG.md  IMPLEMENTATION_STATUS.md  SESSIONS.md  TERMIUS_SSH.md  architecture.md  assumptions.md  limitations.md  repo_split_plan.md  roadmap.md  ui_migration.md
execution-sim-lab/: Makefile  README.md  pyproject.toml  requirements.txt
execution-sim-lab/scripts/: __init__.py  demo.py  ui_check.py
execution-sim-lab/src/execution_sim_lab/: __init__.py  simulator.py
execution-sim-lab/tests/: test_execution_costs.py
scripts/: build_report.py  demo.py  download_data.py  run_backtest.py  run_sweep.py  run_walkforward.py  sync_ui_artifacts.py  termius-info.sh  ui_check.py
src/: __init__.py
src/backtest/: engine.py  montecarlo.py  report.py  runner.py
src/core/: clock.py  config.py  events.py  types.py
src/data/: resample.py  validation.py
src/execution/: fills.py  latency.py  simulator.py  spread.py
src/features/: fvg.py  liquidity.py  pipeline.py
src/portfolio/: accounting.py  exposure.py  pnl.py  positions.py
src/risk/: engine.py  kill_switch.py  limits.py
src/strategy/: base.py
tests/: test_accounting.py  test_demo_pipeline.py  test_execution_costs.py  test_no_lookahead.py  test_risk_limits.py
ui/: __init__.py  app.py
(+57 files in other folders)
