[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-risk-research-stack"
version = "0.1.0"
description = "Risk-first, execution-aware systematic trading research infrastructure"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
errs-demo = "scripts.demo:run_demo"
errs-ui-check = "scripts.ui_check:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ui_streamlit_deprecated*", "scripts*"]
